chore(ui): adjust spacing and fix footer z-index making buttons unclickable

--- a/assets/scss/_layouts.scss
+++ b/assets/scss/_layouts.scss
@@ -12,7 +12,7 @@
 }
 
 .page-container {
-    padding-left: 4rem;
+    padding-left: 2rem;
     padding-right: 0.25rem;
 
     @include media-breakpoint-down(lg) {
